src/styles/modules/_m-button.scss
@include b('button') {
  display: block;
  background-color: color(awhite, base);
  @include border(2px solid color(agray, light));
  border-radius: $border-radius;
  color: color(agray, light);
  font-family: $font_museo;
  font-weight: $weight_bold;
  @include rem-fallback('font-size', 20px);
  cursor: pointer;
  line-height: 2.7;
  width: 100%;
  transition: background $duration_medium ease;
  margin: 0 auto;
  padding: 0;

  &:focus {
    outline: 0;
  }

  &:hover {
    background-color: $color_forty_per_lighter_grey;
    @include border(2px solid color(agray, light));
    color: color(agray, light);

    .#{_b(button) + _e(social-icon)} {
      g {
        fill: #fff;
      }
      .svg-path {
        fill: #fff;
      }
    }
  }

  &:active {
    background-color: color(agray, light);
    color: color(awhite, base);
  }

  @include modifier('size') {
    &-small {
      line-height: 2.5;
      @include rem-fallback('font-size', 16px);
    }
  }

  @include modifier('color') {
    &-green {
      background-color: color(agreen, base);
      border: 0;
      line-height: 2.9;
      color: color(awhite, base);

      &:hover,
      &.hover {
        background-color: color(agreen, dark);
        border: 0;
        box-shadow: $btn-shade-hover;
        color: color(awhite, base);
      }

      &:active,
      &.active {
        background-color: color(agreen, base);
        box-shadow: $btn-shade-active;
      }
    }

    &-orange {
      background-color: color(aorange, base);
      border: 0;
      line-height: 2.9;
      color: color(awhite, base);

      &:hover,
      &.hover {
        background-color: color(aorange, dark);
        border: 0;
        box-shadow: $btn-shade-hover;
        color: color(awhite, base);
      }

      &:active,
      &.active {
        background-color: color(aorange, base);
        box-shadow: $btn-shade-active;
      }
    }

    &-blue {
      background-color: color(ablue, base);
      border: 0;
      line-height: 2.9;
      color: color(awhite, base);

      &:hover,
      &.hover {
        box-shadow: $btn-shade-hover;
        border: 0;
        background-color: color(ablue, dark);
        color: color(awhite, base);
      }

      &:active,
      &.active {
        box-shadow: $btn-shade-active;
        background-color: color(ablue, base);
      }
    }
  }

  @include modifier('text-color') {
    &-fb {
      color: $color-facebook-blue;

      &:hover,
      &.hover {
        background-color: $color-facebook-blue;
        border-color: $color-facebook-blue;
        color: color(awhite, base);
      }
    }

    &-google {
      color: $color-google-red;

      &:hover,
      &.hover {
        background-color: $color-google-red;
        border-color: $color-google-red;
        color: color(awhite, base);
      }
    }
  }

  &[disabled] {
    background-color: color(agray, lighter);
    border: 0;
    line-height: 2.9;
    cursor: not-allowed;
    pointer-events: none;
    color: color(agray, dark);
  }

  @include element('image') {
    float: left;
    @include rem-fallback('width', 58px);
    @include rem-fallback('height', 58px);
    display: flex;
  }

  @include element('icon') {
    fill: color(awhite);
    @include rem-fallback('width', 24px);
    @include rem-fallback('height', 23px);
    display: inline-flex;
    vertical-align: middle;
    @include rem-fallback('margin-right', 5px);
  }

  @include element('social-icon') {
    width: 20%;
    @include rem-fallback('width', 24px);
    @include rem-fallback('height', 23px);
    display: inline-block;
    vertical-align: text-bottom;
    @include rem-fallback('margin-right', 5px);
  }

  // @include element ('ask-about-me') {
  //     font-family: $museo700;
  //     color: color(awhite);
  //     @include font-size(20);
  //     @include rem-fallback('line-height', 26px);
  //     @include rem-fallback('letter-spacing', -.25px);
  // }
}

